--- a/style.css
+++ b/style.css
@@ -19,6 +19,15 @@ h3 {
 h1 {
   font-size: 96px;
 }
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 32px;
+  }
+}
 
 h2 {
   font-size: 48px;
