made index responsive

--- a/style.css
+++ b/style.css
@@ -19,15 +19,6 @@ h3 {
 h1 {
   font-size: 96px;
 }
-@media (max-width: 576px) {
-  h1 {
-    font-size: 48px;
-    line-height: 1.5;
-  }
-  h2 {
-    font-size: 32px;
-  }
-}
 
 h2 {
   font-size: 48px;
@@ -113,4 +104,32 @@ img {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+  h2 {
+    font-size: 32px;
+    text-align: center;
+  }
+  p {
+    text-align: center;
+  }
+  .app-link {
+    display: block;
+    margin: 0 20px;
+    text-align: center;
+  }
+}
+@media (min-width: 576px) {
+  .col-sm-6 {
+    flex: 0 0 auto;
+    width: 50%;
+  }
+  .d-sm-block {
+    display: block;
+  }
 }
